--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-    <head>
-        <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./scripts/d3-parsets/d3.parsets.css">
-        <title>Project 2 - Josephine Situ</title>
-            <script type="text/javascript" src="./scripts/d3.v4.min.js"></script>
-            <script type="text/javascript" src="./scripts/d3-scale-chromatic/d3-scale-chromatic.min.js"></script>
-            <script type="text/javascript" src="./scripts/main.js"></script>
-            <script type="text/javascript" src="./scripts/main1.js"></script>
-            <script type="text/javascript" src="./scripts/main2.js"></script>
-            <script type="text/javascript" src="./scripts/radarChart.js"></script>
-            <script type="text/javascript" src="./scripts/main3.js"></script>
-    </head>
 
-    <body>
-        <div id="myTooltip">
-        
-        </div>
-        <div class="container">
-            <div id="header">
-                <h1>Music Preferences<br> of Youths</h1><h6>Josephine Situ - February 26, 2018</h6>
-            </div>
-            <div class="item" id="vis1"></div>
-            <div class="item" id="vis2"></div>  
-            <div class="item" id="vis3"></div>
-        </div>
+<head>
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./scripts/d3-parsets/d3.parsets.css">
+  <title>Project 2 - Josephine Situ</title>
+  <script type="text/javascript" src="./scripts/d3.v4.min.js"></script>
+  <script type="text/javascript" src="./scripts/d3-scale-chromatic/d3-scale-chromatic.min.js"></script>
+  <script type="text/javascript" src="./scripts/main.js"></script>
+  <script type="text/javascript" src="./scripts/main1.js"></script>
+  <script type="text/javascript" src="./scripts/main2.js"></script>
+  <script type="text/javascript" src="./scripts/radarChart.js"></script>
+  <script type="text/javascript" src="./scripts/main3.js"></script>
+</head>
 
-    </body>
+<body>
+  <div id="myTooltip">
+
+  </div>
+  <div class="container">
+    <div id="header">
+      <h1>Music Preferences
+        <br> of Youths</h1>
+      <h6>Josephine Situ - February 26, 2018</h6>
+      <p>Dataset Used: </p><a href="https://www.kaggle.com/miroslavsabo/young-people-survey">Young People Survey</a>
+    </div>
+    <div class="item" id="vis1"></div>
+    <div class="item" id="vis2"></div>
+    <div class="item" id="vis3"></div>
+  </div>
+
+</body>
+
 </html>
